Добавлены комментарии к коду. У файлов 401, 403 и 403 изменен формат с php на html

--- a/error/401.html
+++ b/error/401.html
@@ -1,3 +1,6 @@
+<!--
+Страница ошибки авторизации (пользователь не авторизован)
+-->
 <!doctype html>
 <html lang="ru">
 <head>
@@ -7,10 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="/js/all.js"></script>
     <title>401</title>
 </head>
@@ -41,7 +44,7 @@
             <div class="col-lg-6 text-center">
                 <h4 class="text-error font-weight-bold" >401</h4>
                 <p class="text-muted">
-                    У вас нет доступа к данной странице. Необходимо авторизоваться в личном кабинете.
+                    У вас нет доступа к данной странице. Необходимо авторизоваться для получения доступа к профилю.
                 </p>
                 <a href="/" class="btn text-white btn-go-home m-1">
                     <i class="fas fa-home mr-2"></i>
