--- a/error/404.html
+++ b/error/404.html
@@ -1,3 +1,6 @@
+<!--
+Страница ошибки перехода к несуществующей странице
+-->
 <!doctype html>
 <html lang="ru">
 <head>
@@ -7,12 +10,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="/js/all.js"></script>
-    <title>403</title>
+    <title>404</title>
 </head>
 <style>
     .btn-go-home {
@@ -28,17 +31,15 @@
     <div class="justify-content-center error-content-center">
         <div class="row">
             <div class="col-lg-6 text-center">
-                <h4 class="text-error font-weight-bold" >403</h4>
-                <p class="text-muted">
-                    У вас нет доступа к данной странице. Нет необходимых прав для ее просмотра.
-                </p>
+                <h4 class="text-error font-weight-bold" >404</h4>
+                <p class="text-muted">К сожалению, данной страницы не существует. Вероятно, она была удалена администратором, либо ее здесь никогда не существовало.</p>
                 <a href="/" class="btn text-white btn-go-home">
                     <i class="fas fa-home mr-2"></i>
                     На главную
                 </a>
             </div>
             <div class="col-lg-6 text-center">
-                <img src="/images/403.svg" class="img-fluid">
+                <img src="/images/404.svg" class="img-fluid">
             </div>
         </div>
     </div>
